--- a/pom.xml
+++ b/pom.xml
@@ -1363,7 +1363,7 @@ limitations under the License.
 
       <dependency>
         <groupId>org.elasticsearch.client</groupId>
-        <artifactId>rest</artifactId>
+        <artifactId>elasticsearch-rest-high-level-client</artifactId>
         <version>${elasticsearch.version}</version>
       </dependency>
 
