--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@ limitations under the License.
     <mapdb.version>0.9.9</mapdb.version>
     <mina.version>2.0.4</mina.version>
     <mockito.version>1.9.0</mockito.version>
+    <morphlines.version>6.5.1</morphlines.version>
     <mvn-antrun-plugin.version>1.7</mvn-antrun-plugin.version>
     <mvn-assembly-plugin.version>2.3</mvn-assembly-plugin.version>
     <mvn-build-helper-plugin>1.7</mvn-build-helper-plugin>
@@ -101,7 +102,7 @@ limitations under the License.
     <protobuf.version>2.5.0</protobuf.version>
     <rat.version>0.11</rat.version>
     <snappy-java.version>1.1.4</snappy-java.version>
-    <solr-global.version>4.3.0</solr-global.version>
+    <solr-global.version>7.2.1</solr-global.version>
     <slf4j.version>1.6.1</slf4j.version>
     <system-rules.version>1.16.0</system-rules.version>
     <thrift.version>0.9.3</thrift.version>
